GNOME Bugzilla – Bug 685471
don't use generic var names, unbreak build on OpenBSD
Last modified: 2012-10-04 14:26:11 UTC
Created attachment 225773 [details] [review] prefix generic var names with "ev_" Hi. OpenBSD (and maybe other OS) already declare stdout and stdin in <stdio.h> which breaks evolution build, so prefix both with "_ev" to prevent clashing to prevent: e-mail-formatter-text-highlight.c:190: error: expected identifier or '(' before '&' token Would that be alright to push? Thank you.
I would prefer more descriptive names like "pipe_stdin" and "pipe_stdout", but otherwise it's fine to push. Thanks for catching this.
Thank you Matthew. It's in as 1cfe0327ca436a687383412664e3a5c2869c7dda (with the "pipe_stdin" and "pipe_stdout" modification).
Thanks. I cherry-picked it to the gnome-3-6 branch: http://git.gnome.org/browse/evolution/commit/?h=gnome-3-6&id=ceda9fa5e742b511886335078cce6f5d2667295f