portability: don't use too generic variable names

OpenBSD (and maybe other OS) already declare stdout and stdin in <stdio.h>
which breaks evolution build, so prefix both with "pipe_" to prevent clashing.

https://bugzilla.gnome.org/show_bug.cgi?id=685471